--- a/organisation/organisation.html
+++ b/organisation/organisation.html
@@ -86,7 +86,7 @@
             <br>
             <p>Dabei ist es wichtig rechtzeitig seine Bewerbung einzureichen. Die Fristen zur Einschreibung findet ihr
                 unter
-                (<a href="http://www.uni-tuebingen.de/studium/bewerbung-und-immatrikulation/immatrikulation/erforderliche-nachweise-fuer-die-immatrikulation.html#c321117">Nachweise
+                (<a href="http://www.uni-tuebingen.de/studium/bewerbung-und-immatrikulation/immatrikulation/erforderliche-nachweise-fuer-die-immatrikulation.html">Nachweise
                     für die Immatrikulation</a>).</p><br>
             <p>Der Bewerbung müssen dabei folgende Unterlagen beiliegen:</p><br>
             <ul>
