--- a/gebaeude.html
+++ b/gebaeude.html
@@ -5,29 +5,44 @@
     <title>Einstieg Erstsemester - Gebäude</title>
     <link rel="stylesheet" href="Stylesheets/style.css">
     <style>
+
+        main {
+            margin-bottom: 50em;
+        }
+
         .section {
             padding-left: 2em;
             padding-top: 2em;
             margin: 0 auto;
-            text-align: center;
+            float: left;
         }
 
-        .ort {
-            position: absolute;
-            top: 26em;
-            left: 39em;
+        h2 {
+            margin-bottom: 1em;
         }
 
-        .hidden {
-            position: absolute;
-            display: none;
-            background: #fffad3;
+        main ul {
+            float: right;
+            list-style-type: none;
+            font-family: sans-serif;
+            margin-left: 2em;
+        }
+
+        main li {
+            background: #fffad6;
+            top: 0;
             padding: 1em;
-            width: 13em;
         }
 
-        .ort:hover .hidden {
-            display: block;
+        #n6 {
+            position: absolute;
+            visibility: hidden;
+            margin-left: -26.5em;
+            margin-top: 10em;
+        }
+
+        li:hover #n6 {
+            visibility: visible;
         }
 
     </style>
@@ -65,14 +80,13 @@
     <div id="morgenstelle" class="section">
         <h2>Morgenstelle</h2>
         <img src="Images/morgenstelle.png">
-        <div class="ort">
-            <img src="Images/Marker.png">
-            <div class="hidden">
-                <strong>Hörsaal N6</strong>
-                <p>Hörsaalzentrum Morgenstelle</p>
-                <p>Eingang 1. OG</p>
-            </div>
-        </div>
+        <ul>
+            <li>
+                <h3>Hörsaal N6</h3>
+                <p>Horsaalzentrum 1. OG</p>
+                <img src="Images/Marker.png" id="n6">
+            </li>
+        </ul>
     </div>
 </main>
 <footer>
