--- a/faecher/informatik.html
+++ b/faecher/informatik.html
@@ -99,6 +99,7 @@
                         <div class="popup">
                             <p><strong>Dozent:</strong> Luxburg</p>
                             <p><strong>Uhrzeit:</strong> 08:15 – 10:00</p>
+                            <p><strong>Hörsaal:</strong> <a href="../gebaeude.html">N7</a></p>
                             <p><strong>Klausur:</strong> 12. Februar 2018</p>
                         </div>
                     </td>
@@ -108,6 +109,7 @@
                         <div class="popup">
                             <p><strong>Dozent:</strong> Luxburg</p>
                             <p><strong>Uhrzeit:</strong> 08:15 – 10:00</p>
+                            <p><strong>Hörsaal:</strong> <a href="../gebaeude.html">N6</a></p>
                             <p><strong>Klausur:</strong> 12. Februar 2018</p>
                         </div>
                     </td>
@@ -121,6 +123,7 @@
                         <div class="popup">
                             <p><strong>Dozent:</strong> Bringmann</p>
                             <p><strong>Uhrzeit:</strong> 10:15 – 12:00</p>
+                            <p><strong>Hörsaal:</strong> <a href="../gebaeude.html">N7</a></p>
                             <p><strong>Klausur:</strong> 16. Februar 2018</p>
                         </div>
                     </td>
@@ -138,6 +141,7 @@
                         <div class="popup">
                             <p><strong>Dozent:</strong> Bringmann</p>
                             <p><strong>Uhrzeit:</strong> 13:15 – 14:00</p>
+                            <p><strong>Hörsaal:</strong> <a href="../gebaeude.html">N5</a></p>
                             <p><strong>Klausur:</strong> 16. Februar 2018</p>
                         </div>
                     </td>
@@ -152,6 +156,7 @@
                         <div class="popup">
                             <p><strong>Dozent:</strong> Ostermann</p>
                             <p><strong>Uhrzeit:</strong> 14:15 – 16:00</p>
+                            <p><strong>Hörsaal:</strong> <a href="../gebaeude.html">N6</a></p>
                             <p><strong>Klausur:</strong> 06. Februar 2018</p>
                         </div>
                     </td>
@@ -161,6 +166,7 @@
                         <div class="popup">
                             <p><strong>Dozent:</strong> Ostermann</p>
                             <p><strong>Uhrzeit:</strong> 14:15 – 16:00</p>
+                            <p><strong>Hörsaal:</strong> <a href="../gebaeude.html">N6</a></p>
                             <p><strong>Klausur:</strong> 06. Februar 2018</p>
                         </div>
                     </td>
