--- a/klausurinfo.html
+++ b/klausurinfo.html
@@ -11,6 +11,21 @@
             width: 100vw;
         }
 
+        main {
+            margin-bottom: 60em;
+        }
+
+        .section {
+            width: 48%;
+            padding-left: 2em;
+            padding-top: 2em;
+            float: left;
+        }
+
+        h2 {
+            font-family: 'Courgette', cursive;
+        }
+
     </style>
 </head>
 <body>
@@ -42,42 +57,40 @@
     </nav>
 </header>
 <main>
-    <h1>Organisation</h1>
+    <h1>Klausurinformationen</h1>
     <div class="section">
-        <h2>Immatrikulation</h2><br>
-        <p>Die erste Hürde zu einem erfolgreichen Einstieg ins Studium ist die Immatrikulation.</p><br>
-        <p>Die Immatrikulation erfolgt über das Bewerbungsportal ALMA. Dort findet ihr genauere Informationen zur
-            Immatrikulation und Bewerbung und könnt außerdem jederzeit den Status eurer Immatrikulation einsehen.</p>
+        <h2>Fristen</h2><br>
+        <p>Bei der Bewältigung der Klausuren ist eines essentiell: eine rechtzeitige Anmeldung für die Klausuren.</p>
         <br>
-        <p>Dabei ist es wichtig rechtzeitig seine Bewerbung einzureichen. Die Fristen zur Einschreibung findet ihr unter
-            (<a href="http://www.uni-tuebingen.de/studium/bewerbung-und-immatrikulation/immatrikulation/erforderliche-nachweise-fuer-die-immatrikulation.html#c321117">Nachweise
-                für die Immatrikulation</a>).</p><br>
-        <p>Der Bewerbung müssen dabei folgende Unterlagen beiliegen:</p><br>
-        <ul>
-            <li>Kopie des Personalausweis</li>
-            <li>Bescheinigung einer Krankenversicherung</li>
-            <li>Nachweis der Hochschulzugangsberechtigung</li>
-            <li>Passfoto</li>
-            <li>Nachweis der Teilnahme am Studienorientierungsverfahren</li>
-            <li>für Bio – und Medizininformatik: Zulassungsbescheid</li>
-        </ul>
+        <p>Der Anmeldezeitraum einer Klausur beginnt meist einige Monate vor der eigentlichen Klausur und endet ca. eine
+            Woche davor. </p>
         <br>
-        <p>Um den Zulassungsbescheid zu erhalten muss man bei ALMA einen Zulassungsantrag stellen.</p><br>
-        <p>Das gilt nur für Bio – und Medizininformatik, bei dem Studiengang Informatik ist eine direkte Bewerbung
-            möglich.</p><br>
-        <p>Wenn ihr euren Immatrikulationsantrag dann eingereicht habt, erhaltet ihr einige Wochen später den Bescheid
-            der Immatrikulation per Post.</p>
+        <p>Es ist jedoch auch möglich, dass der Anmeldezeitraum knapper bemessen ist, deshalb empfiehlt ein frühzeitiger
+            Blick ins Campus-Portal (<a href="https://campus.verwaltung.uni-tuebingen.de/">https://campus.verwaltung.uni-tuebingen.de/</a>).
+            Dort findet ihr, nach dem Einloggen,
+            unter Prüfungsverwaltung die Fristen für fast jedes Fach aufgelistet.</p><br>
+        <p>Bei Veranstaltungen, die dort nicht aufgeführt werden, solltet ihr euch an die Organisatoren der Vorlesung
+            wenden.</p>
     </div>
     <div class="section">
-        <h2>Studiengebühr</h2><br>
-        <p>Die Semesterbeiträge belaufen sich aktuell auf 153,80€, und sollten bis zum 15.2.2018 beglichen werden.</p><br>
-        <p>Der Semesterbeitrag setzt sich aus dem Beitrag zum Studierendenwerk, den Verwaltungskosten und dem Studierendenschaftsbeitrag zusammen. Genauere Informationen unter: <a href="https://www.uni-tuebingen.de/studium/studienorganisation/beitraege-und-gebuehren/semesterbeitraege.html">Semesterbeiträge</a></p>
+        <h2>Anmeldung</h2><br>
+        <p>Entschließt ihr euch, euch für eine Klausur anzumelden, meldet ihr euch zunächst im Campus-Portal an. Dort
+            klickt ihr auf „Prüfungsverwaltung“ und dann auf „Prüfungsan – und – abmeldung“. Dort wählt ihr eure
+            Veranstaltung aus und habt dann die Möglichkeit die Prüfungsanmeldung vorzunehmen.</p><br>
+        <p>Falls die Anmeldungsfrist schon abgelaufen ist, kann eine Mail an die Zuständigen  manchmal noch zu einer
+            Anmeldung führen.</p><br>
+        <p>In einigen wenigen Fällen reicht eine Anmeldung über Campus nicht aus und es muss noch eine weitere Anmeldung
+            durchgeführt werden. Deswegen empfiehlt es sich grade die erste Vorlesung eines Kurses zu besuchen, da dort
+            meist die organistorischen Rahmenbedingungen geklärt werden.</p>
     </div>
     <div class="section">
-        <h2>Semesterticket</h2><br>
-        <p>Ein großer Vorteil des Studentenlebens ist das Semesterticket. Mit ihm könnt ihr alle Busse und Bahnen im naldo-Gebiet nutzen. </p><br>
-        <p>Das Semesterticket kostet 89,70€ und ist online, sowie an Schaltern der Busbahnhöfe erhältlich.  Um das Semesterticket zu erhalten, muss der Studierendenausweis (mit gültigem Aufdruck), sowie die Bescheinigung für das Semesterticket vorgelgt werden.</p><br>
-        <p id="attention">Wichtig: Beim Fahren mit dem Semesterticket muss zudem immer der Studentenausweis mitgefühhrt werden.</p>
+        <h2>Abmeldung</h2><br>
+        <p>Solltet ihr euch dazu entscheiden eine Prüfung doch nicht mitzuschreiben, solltet ihr euch auf dem selben
+            Wege wie bei der Anmeldung abmelden. Ansonsten wird die Klausur als Versuch gezählt.</p><br>
+        <p>Beim Krankheitsfall kann durch die Vorlage des Attests die Anrechnung eines Versuches auf die Klausur
+            verhindert werden.</p><br>
+        <p>Falls die Abmeldefrist schon abgelaufen ist, kann eine Mail an die Zuständigen  manchmal noch
+            zu einer Abmeldung führen.</p>
     </div>
 </main>
 <footer>
