--- a/faecher/medizininformatik.html
+++ b/faecher/medizininformatik.html
@@ -99,6 +99,7 @@
                         <div class="popup">
                             <p><strong>Dozent:</strong> Luxburg</p>
                             <p><strong>Uhrzeit:</strong> 08:15 – 10:00</p>
+                            <p><strong>Hörsaal:</strong> <a href="../gebaeude.html">N7</a></p>
                             <p><strong>Klausur:</strong> 12. Februar 2018</p>
                         </div>
                     </td>
@@ -108,6 +109,7 @@
                         <div class="popup">
                             <p><strong>Dozent:</strong> Luxburg</p>
                             <p><strong>Uhrzeit:</strong> 08:15 – 10:00</p>
+                            <p><strong>Hörsaal:</strong> <a href="../gebaeude.html">N6</a></p>
                             <p><strong>Klausur:</strong> 12. Februar 2018</p>
                         </div>
                     </td>
@@ -123,6 +125,7 @@
                         <div class="popup">
                             <p><strong>Dozent:</strong> Lautenbacher</p>
                             <p><strong>Uhrzeit:</strong> 10:15 – 12:00</p>
+                            <p><strong>Hörsaal:</strong> <a href="../gebaeude.html">C9A03</a></p>
                             <p><strong>Klausur:</strong> n.a.</p>
                         </div>
                     </td>
@@ -131,6 +134,7 @@
                         <div class="popup">
                             <p><strong>Dozent:</strong> Schneider</p>
                             <p><strong>Uhrzeit:</strong> 10:15 – 12:00</p>
+                            <p><strong>Hörsaal:</strong> <a href="../gebaeude.html">H2C14</a></p>
                             <p><strong>Klausur:</strong> n.a.</p>
                         </div>
                     </td>
@@ -152,6 +156,7 @@
                         <div class="popup">
                             <p><strong>Dozent:</strong> Ostermann</p>
                             <p><strong>Uhrzeit:</strong> 14:15 – 16:00</p>
+                            <p><strong>Hörsaal:</strong> <a href="../gebaeude.html">N6</a></p>
                             <p><strong>Klausur:</strong> 06. Februar 2018</p>
                         </div>
                     </td>
@@ -161,6 +166,7 @@
                         <div class="popup">
                             <p><strong>Dozent:</strong> Ostermann</p>
                             <p><strong>Uhrzeit:</strong> 14:15 – 16:00</p>
+                            <p><strong>Hörsaal:</strong> <a href="../gebaeude.html">N6</a></p>
                             <p><strong>Klausur:</strong> 06. Februar 2018</p>
                         </div>
                     </td>
@@ -173,6 +179,7 @@
                         <div class="popup">
                             <p><strong>Dozent:</strong> Huber, Hirt, Just</p>
                             <p><strong>Uhrzeit:</strong> 16:00 – 17:30</p>
+                            <p><strong>Hörsaal:</strong> <a href="../gebaeude.html">Hörsaal Psychiatrie</a></p>
                             <p><strong>Klausur:</strong> 09. Februar 2018</p>
                         </div>
                     </td>
@@ -181,6 +188,7 @@
                         <div class="popup">
                             <p><strong>Dozent:</strong> Huber, Hirt, Just</p>
                             <p><strong>Uhrzeit:</strong> 16:15 – 17:45</p>
+                            <p><strong>Hörsaal:</strong> <a href="../gebaeude.html">Hörsaal Psychiatrie</a></p>
                             <p><strong>Klausur:</strong> 09. Februar 2018</p>
                         </div>
                     </td>
