Lagepläne Morgenstelle , Sand, Psychatrie
Morgenstelle mit Bus und N5,N6 Marker

--- a/gebaeude.html
+++ b/gebaeude.html
@@ -40,19 +40,29 @@
             visibility: hidden;
         }
 
-        #n6 {
-            margin-left: -26.5em;
-            margin-top: 10em;
+		#n5 {
+            margin-left: -32.3em;
+            margin-top: 25.3em;
+        }
+		
+		#n6 {
+            margin-left: -32em;
+            margin-top: 18em;
         }
 
-        #n7 {
-            margin-left: -24.5em;
-            margin-top: 3em;
+        #bus1 {
+            margin-left: -32.9em;
+            margin-top: 45.8em;
         }
-
-        #bus {
-            margin-left: -26em;
+		
+        #bus2 {
+            margin-left: -54.6em;
             margin-top: 15em;
+        }
+		
+        #bus3 {
+            margin-left: -61em;
+            margin-top: -18.5em;
         }
 
         li:hover .marker{
@@ -92,28 +102,46 @@
     <h1>Gebäude und Hörsaal Übersicht</h1>
     <div id="morgenstelle" class="section">
         <h2>Morgenstelle</h2>
-        <img src="Images/morgenstelle.png">
+        <img src="Images/morgenstelle_final.png">
         <ul>
+            <li>
+                <h3>Hörsaal N5</h3>
+                <p>Horsaalzentrum 1. OG</p>
+                <img src="Images/Marker.png" id="n5" class="marker">
+            </li>
+			
             <li>
                 <h3>Hörsaal N6</h3>
                 <p>Horsaalzentrum 1. OG</p>
                 <img src="Images/Marker.png" id="n6" class="marker">
             </li>
-            <li>
-                <h3>Hörsaal N7</h3>
-                <p>Horsaalzentrum 1. OG</p>
-                <img src="Images/Marker.png" id="n7" class="marker">
-            </li>
+		
             <li>
                 <h3>Bushaltestelle</h3>
                 <p>BG Unfallklinik</p>
-                <img src="Images/Marker.png" id="bus" class="marker">
+                <img src="Images/Marker.png" id="bus1" class="marker">
             </li>
+			<li>
+                <h3>Bushaltestelle</h3>
+                <p>Auf der Morgenstelle</p>
+                <img src="Images/Marker.png" id="bus2" class="marker">
+            </li>
+			<li>
+                <h3>Bushaltestelle</h3>
+                <p>Botanischer Garten</p>
+                <img src="Images/Marker.png" id="bus3" class="marker">
+            </li>
+
+			
         </ul>
     </div>
     <div id="sand" class="section">
         <h2>Sand</h2>
-        <img src="Images/sand.png">
+        <img src="Images/sand_final.png">
+    </div>
+	<div id="psychatrie" class="section">
+        <h2>Psychatrie</h2>
+        <img src="Images/psychatrie_final.png">
     </div>
 </main>
 <footer>
