--- a/gebaeude.html
+++ b/gebaeude.html
@@ -7,7 +7,7 @@
     <style>
 
         main {
-            margin-bottom: 80em;
+            margin-bottom: 160em;
         }
 
         .section {
@@ -41,18 +41,23 @@
         }
 
 		#n5 {
-            margin-left: -32.3em;
-            margin-top: 25.3em;
+            margin-left: -26.0em;
+            margin-top: 18.3em;
         }
 		
 		#n6 {
-            margin-left: -32em;
-            margin-top: 18em;
+            margin-left: -27em;
+            margin-top: 10.5em;
+        }
+
+        #n7 {
+            margin-left: -23em;
+            margin-top: 4.5em;
         }
 
         #bus1 {
-            margin-left: -32.9em;
-            margin-top: 45.8em;
+            margin-left: -25em;
+            margin-top: 22em;
         }
 		
         #bus2 {
@@ -102,7 +107,7 @@
     <h1>Gebäude und Hörsaal Übersicht</h1>
     <div id="morgenstelle" class="section">
         <h2>Morgenstelle</h2>
-        <img src="Images/morgenstelle_final.png">
+        <img src="Images/morgenstelle.png">
         <ul>
             <li>
                 <h3>Hörsaal N5</h3>
@@ -115,7 +120,13 @@
                 <p>Horsaalzentrum 1. OG</p>
                 <img src="Images/Marker.png" id="n6" class="marker">
             </li>
-		
+
+            <li>
+                <h3>Hörsaal N7</h3>
+                <p>Horsaalzentrum 1. OG</p>
+                <img src="Images/Marker.png" id="n7" class="marker">
+            </li>
+
             <li>
                 <h3>Bushaltestelle</h3>
                 <p>BG Unfallklinik</p>
@@ -137,11 +148,11 @@
     </div>
     <div id="sand" class="section">
         <h2>Sand</h2>
-        <img src="Images/sand_final.png">
+        <img src="Images/sand.png">
     </div>
 	<div id="psychatrie" class="section">
         <h2>Psychatrie</h2>
-        <img src="Images/psychatrie_final.png">
+        <img src="Images/psychatrie.png">
     </div>
 </main>
 <footer>
