--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div id="first_section">
             <div id="bg-image"></div>
             <div id="information">
-                <h2>Herzlich willkommen!</h2><br>
+                <h2>Herzlich Willkommen!</h2><br>
                 <p>Hier auf unserer Website „Einstieg – Erstsemester“ findest du Informationen, die dir die ersten Monate des Studentenlebens, als auch den Weg dorthin, erleichtern sollen.</p><br>
                 <div id="text">
                     <h3>Die Website richtet sich an alle Studierenden und Studieninteressierte der Medizininformatik, Bioinformatik und Informatik.</h3><br>
