--- a/faecher/medizininformatik.html
+++ b/faecher/medizininformatik.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <title>Einstieg Erstsemester - Medizininformatik</title>
@@ -67,7 +67,7 @@
             <div id="text">
                 <h2>Beschreibung</h2>
                 <p>Der Studiengang der Medizininformatik vermittelt hauptsächlich Grundlagen der Informatik, Mathematik, Biologie und Medizin, wobei der Mathematik eine eher untergeordnete Rolle zugeordnet wird.</p><br>
-                <p>Die Kurse des 6-semestrigen Studiums sind bis zum 4. Semester komplett festgelegt.  Ab dem 5. Semester können einige Schwerpunkte nach eigenem Interesse gesetzt werden.</p><br>
+                <p>Die Kurse des 6-semestrigen Studiums sind bis zum 4. Semester komplett festgelegt. Ab dem 5. Semester können einige Schwerpunkte nach eigenem Interesse gesetzt werden.</p><br>
                 <p>Kurse können sowohl als Vorlesungen, Seminare, Übungen und Praktika stattfinden.</p><br>
                 <p>Die Zielgruppe des Studiums der Medizininformatik besteht aus Allen, die sich für Informationsverarbeitung im Gesundheitswesen interessieren, oder eine Forschungskarriere im Bereich der medizinischen Informatik anstreben.</p><br>
                 <h2>Allgemeine Daten</h2>
