--- a/gebaeude.html
+++ b/gebaeude.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <title>Einstieg Erstsemester - Gebäude</title>
@@ -53,6 +53,11 @@
         #n7 {
             margin-left: -22em;
             margin-top: 4.2em;
+        }
+
+        #c9 {
+            margin-left: -22em;
+            margin-top: -7.2em;
         }
 
         #bus1 {
@@ -124,6 +129,12 @@
                 <h3>Hörsaal N7</h3>
                 <p>Horsaalzentrum 1. OG</p>
                 <img src="Images/Marker.png" id="n7" class="marker">
+            </li>
+
+            <li>
+                <h3>Hörsaal C9A03</h3>
+                <p>C-Bau 9. OG</p>
+                <img src="Images/Marker.png" id="c9" class="marker">
             </li>
 
             <li>
