--- a/gebaeude.html
+++ b/gebaeude.html
@@ -60,18 +60,34 @@
             margin-top: -7.2em;
         }
 
+        #h2 {
+            margin-left: -25.5em;
+            margin-top: -11em;
+        }
+
         #bus1 {
             margin-left: -24em;
-            margin-top: 20em;
+            margin-top: 10em;
         }
 		
         #bus2 {
             margin-left: -33.6em;
+            margin-top: -10em;
         }
 		
         #bus3 {
             margin-left: -36em;
-            margin-top: -27.5em;
+            margin-top: -37.5em;
+        }
+
+        #bus4 {
+            margin-left: -41.5em;
+            margin-top: 1.5em;
+        }
+
+        #psy {
+            margin-left: -20.5em;
+            margin-top: 10.5em;
         }
 
         li:hover .marker{
@@ -138,6 +154,12 @@
             </li>
 
             <li>
+                <h3>Hörsaal H2C14</h3>
+                <p>H-Bau EG</p>
+                <img src="Images/Marker.png" id="h2" class="marker">
+            </li>
+
+            <li>
                 <h3>Bushaltestelle</h3>
                 <p>BG Unfallklinik</p>
                 <img src="Images/Marker.png" id="bus1" class="marker">
@@ -155,14 +177,28 @@
 
 			
         </ul>
-    </div>
+    </div><br>
     <div id="sand" class="section">
         <h2>Sand</h2>
         <img src="Images/sand.png">
-    </div>
+        <ul>
+            <li>
+                <h3>Bushaltestelle</h3>
+                <p>Sand Drosselweg</p>
+                <img src="Images/Marker.png" id="bus4" class="marker">
+            </li>
+        </ul>
+    </div><br>
 	<div id="psychatrie" class="section">
         <h2>Psychatrie</h2>
         <img src="Images/psychatrie.png">
+        <ul>
+            <li>
+                <h3>Hörsaal Psychiatrie</h3>
+                <p>Klinik für Psychiatrie EG</p>
+                <img src="Images/Marker.png" id="psy" class="marker">
+            </li>
+        </ul>
     </div>
 </main>
 <footer>
