--- a/impressum.html
+++ b/impressum.html
@@ -1,14 +1,76 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Impressum</title>
+    <title>Einstieg Erstsemester - Klausurinfo</title>
+    <link rel="stylesheet" href="Stylesheets/style.css">
+    <style>
+
+        body {
+            background: linear-gradient(white 20%, rgba(199, 195, 193, 0.82) 95%, white, white);
+            width: 100vw;
+            overflow: hidden;
+        }
+
+        main {
+            margin-bottom: 50vh;
+        }
+
+        section {
+            padding: 2em;
+        }
+
+        h2 {
+            font-family: 'Courgette', cursive;
+        }
+
+    </style>
 </head>
 <body>
-Quellen:
-<p>https://de.wikipedia.org/wiki/Morgenstelle</p>
-<p>https://pixabay.com/p-1811955/?no_redirect</p>
-<p>http://maxpixel.freegreatpicture.com/Digital-Computer-Coding-Html-Code-Programming-Web-1076533</p>
-<p>https://www.pexels.com/photo/computer-desk-laptop-stethoscope-48604/</p>
+<header>
+    <a href="index.html"><img src="Images/logo.svg" id="logo"></a>
+    <nav>
+        <ul>
+            <li class="dropdown">
+                <a href="faecher/faecher.html" class="dropbtn">Fächer</a>
+                <div class="dropdown_content">
+                    <a href="faecher/bioinformatik.html">Bioinformatik</a>
+                    <a href="faecher/informatik.html">Informatik</a>
+                    <a href="faecher/medizininformatik.html">Medizininformatik</a>
+                </div>
+            </li>
+            <li class="dropdown">
+                <a href="organisation/organisation.html" class="dropbtn">Organisation</a>
+            </li>
+            <li class="dropdown">
+                <a href="klausurinfo.html" class="dropbtn">Klausurinfo</a>
+            </li>
+            <li class="dropdown">
+                <a href="ansprechpartner.html" class="dropbtn">Ansprechpartner</a>
+            </li>
+            <li class="dropdown">
+                <a href="gebaeude.html" class="dropbtn">Gebäude</a>
+            </li>
+        </ul>
+    </nav>
+</header>
+<main>
+    <h1>Kontaktinformationen</h1>
+    <section>
+        <h2>Anschrift:</h2>
+        <p>Max Mustermann</p>
+        <p>Musterstraße 1</p>
+        <p>12345 Musterstadt</p>
+        <p>DE – Germany</p><br>
+        <h2>Quellen:</h2>
+        <p>https://de.wikipedia.org/wiki/Morgenstelle</p>
+        <p>https://pixabay.com/p-1811955/?no_redirect</p>
+        <p>http://maxpixel.freegreatpicture.com/Digital-Computer-Coding-Html-Code-Programming-Web-1076533</p>
+        <p>https://www.pexels.com/photo/computer-desk-laptop-stethoscope-48604/</p>
+    </section>
+</main>
+<footer>
+    <a href="impressum.html">Kontakt</a>
+</footer>
 </body>
 </html>
