--- a/klausurinfo.html
+++ b/klausurinfo.html
@@ -33,7 +33,7 @@
     <a href="index.html"><img src="Images/logo.svg" id="logo"></a>
     <nav>
         <ul>
-            <li class="dropdown">
+            <li class="dropdown faecher">
                 <a href="faecher/faecher.html" class="dropbtn">Fächer</a>
                 <div class="dropdown_content">
                     <a href="faecher/bioinformatik.html">Bioinformatik</a>
