--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <nav>
         <ul>
             <li class="dropdown faecher">
-                <a href="faecher/faecher.html" class="dropbtn">Fächer</a>
+                <a href="faecher/faecher.html" class="dropbtn">Studienangebote</a>
                 <div class="dropdown_content">
                     <a href="faecher/bioinformatik.html">Bioinformatik</a>
                     <a href="faecher/informatik.html">Informatik</a>
