--- a/klausurinfo.html
+++ b/klausurinfo.html
@@ -22,10 +22,6 @@
             float: left;
         }
 
-        h2 {
-            font-family: 'Courgette', cursive;
-        }
-
     </style>
 </head>
 <body>
@@ -33,8 +29,8 @@
     <a href="index.html"><img src="Images/logo.svg" id="logo"></a>
     <nav>
         <ul>
-            <li class="dropdown faecher">
-                <a href="faecher/faecher.html" class="dropbtn">Fächer</a>
+            <li class="dropdown ">
+                <a href="faecher/faecher.html" class="dropbtn">Studienangebote</a>
                 <div class="dropdown_content">
                     <a href="faecher/bioinformatik.html">Bioinformatik</a>
                     <a href="faecher/informatik.html">Informatik</a>
