--- a/organisation/organisation.html
+++ b/organisation/organisation.html
@@ -26,15 +26,12 @@
             padding-left: 1.5em;
         }
 
-        h2 {
-            font-family: 'Courgette', cursive;
-        }
-
         #attention {
             background: rgba(255, 0, 0, 0.08);
             border: 1px solid rgba(0, 0, 0, 0.12);
             border-radius: 12px;
             padding: 1em;
+            color: black;
         }
 
         #important {
@@ -51,7 +48,7 @@
     <nav>
         <ul>
             <li class="dropdown faecher">
-                <a href="../faecher/faecher.html" class="dropbtn">Fächer</a>
+                <a href="../faecher/faecher.html" class="dropbtn">Studienangebote</a>
                 <div class="dropdown_content">
                     <a href="../faecher/bioinformatik.html">Bioinformatik</a>
                     <a href="../faecher/informatik.html">Informatik</a>
