--- a/faecher/faecher.html
+++ b/faecher/faecher.html
@@ -64,7 +64,7 @@
     <nav>
         <ul>
             <li class="dropdown faecher active">
-                <a href="faecher.html" class="dropbtn">Fächer</a>
+                <a href="faecher.html" class="dropbtn">Studienangebote</a>
                 <div class="dropdown_content">
                     <a href="bioinformatik.html">Bioinformatik</a>
                     <a href="informatik.html">Informatik</a>
