--- a/faecher/informatik.html
+++ b/faecher/informatik.html
@@ -19,6 +19,7 @@
             float: left;
             width: 40%;
             margin-left: 2em;
+            line-height: 1.15em;
         }
 
         .image {
@@ -38,7 +39,7 @@
     <nav>
         <ul>
             <li class="dropdown faecher active">
-                <a href="faecher.html" class="dropbtn">Fächer</a>
+                <a href="faecher.html" class="dropbtn">Studienangebote</a>
                 <div class="dropdown_content">
                     <a href="bioinformatik.html">Bioinformatik</a>
                     <a href="informatik.html">Informatik</a>
@@ -65,19 +66,25 @@
     <main>
         <div id="information">
             <div id="text">
-                <h2>Beschreibung</h2>
-                <p>Das Studium der Informatik beschäftigt sich größtenteils  mit Inhalten der allgemeinen, praktischen, theoretischen und technischen Informatik, sowie der Mathematik.  Vermittelt werden außerdem Kenntnisse in einem wählbaren Anwendungsbereich.</p>
-                <p>Der Studiengang beinhaltet vergleichsweise viele Wahlfächer und kann somit nach eigenem Interesse angepasst.</p><br>
+                <h2>Beschreibung</h2><br>
+                <p>Das Studium der Informatik beschäftigt sich größtenteils  mit Inhalten der allgemeinen, praktischen,
+                    theoretischen und technischen Informatik, sowie der Mathematik.  Vermittelt werden außerdem
+                    Kenntnisse in einem wählbaren Anwendungsbereich.</p>
+                <p>Der Studiengang beinhaltet vergleichsweise viele Wahlfächer und kann somit nach eigenem Interesse
+                    angepasst.</p><br>
                 <p>Kurse können in Form von Vorlesungen, Seminaren, Übungen und Praktika stattfinden.</p><br>
-                <p>Der Studiengang der Informatik ist besonders geeignet für jeden, der sich für Informationsverarbeitung interessiert, sowie ein Verständnis für Mathematik, logisches Denken und Abstraktionsvermögen aufweisen kann.</p><br>
-                <h2>Allgemeine Daten</h2>
+                <p>Der Studiengang der Informatik ist besonders geeignet für jeden, der sich für
+                    Informationsverarbeitung interessiert, sowie ein Verständnis für Mathematik, logisches Denken und
+                    Abstraktionsvermögen aufweisen kann.</p><br><br>
+                <h2>Allgemeine Daten</h2><br>
                 <p>Studienbeginn: Winter – oder Sommersemester</p><br>
                 <p>Abschluss: Bachelor of Science</p><br>
                 <p>Zulassungsbeschränkt: Nein</p><br>
-                <p>Regelstudienzeit: 6 Semester</p><br>
-                <h2>Berufsperspektiven</h2>
+                <p>Regelstudienzeit: 6 Semester</p><br><br>
+                <h2>Berufsperspektiven</h2><br>
                 <p>Durch eine stetig wachsende IT-Branche gelten die Jobchancen von Informatikern als sehr gut.</p><br>
-                <p>Durch die fortschreitende Digitalisierung werden auch weiterhin gute Berufsperspektiven vorrausgesagt.</p>
+                <p>Durch die fortschreitende Digitalisierung werden auch weiterhin gute Berufsperspektiven
+                    vorrausgesagt.</p>
             </div>
             <img class="image" src="../Images/informatik.jpg">
         </div>
@@ -185,7 +192,8 @@
             </table>
             <span id="zusatzinfos">
                 <p>Anmerkung: Hinzu kommen noch Übungen und Übungsgruppen für die jeweiligen Fächer.</p>
-                *Zusätzlich haben Informatiker im ersten Semester ein Studium Professionale im Umfang von 6 ECTS.
+                <p>*Zusätzlich haben Informatiker im ersten Semester ein Studium Professionale im Umfang von 6 ECTS.</p>
+                <p id="attention">Gehe mit der Maus über die einzelnen Fächer um zusätzliche Informationen zu erhalten.</p>
             </span>
         </div>
     </main>
