--- a/faecher/medizininformatik.html
+++ b/faecher/medizininformatik.html
@@ -19,6 +19,7 @@
             float: left;
             width: 40%;
             margin-left: 2em;
+            line-height: 1.15em;
         }
 
         .image {
@@ -38,7 +39,7 @@
     <nav>
         <ul>
             <li class="dropdown faecher active">
-                <a href="faecher.html" class="dropbtn">Fächer</a>
+                <a href="faecher.html" class="dropbtn">Studienangebote</a>
                 <div class="dropdown_content">
                     <a href="bioinformatik.html">Bioinformatik</a>
                     <a href="informatik.html">Informatik</a>
@@ -65,17 +66,17 @@
     <main>
         <div id="information">
             <div id="text">
-                <h2>Beschreibung</h2>
+                <h2>Beschreibung</h2><br>
                 <p>Der Studiengang der Medizininformatik vermittelt hauptsächlich Grundlagen der Informatik, Mathematik, Biologie und Medizin, wobei der Mathematik eine eher untergeordnete Rolle zugeordnet wird.</p><br>
                 <p>Die Kurse des 6-semestrigen Studiums sind bis zum 4. Semester komplett festgelegt. Ab dem 5. Semester können einige Schwerpunkte nach eigenem Interesse gesetzt werden.</p><br>
                 <p>Kurse können sowohl als Vorlesungen, Seminare, Übungen und Praktika stattfinden.</p><br>
-                <p>Die Zielgruppe des Studiums der Medizininformatik besteht aus Allen, die sich für Informationsverarbeitung im Gesundheitswesen interessieren, oder eine Forschungskarriere im Bereich der medizinischen Informatik anstreben.</p><br>
-                <h2>Allgemeine Daten</h2>
+                <p>Die Zielgruppe des Studiums der Medizininformatik besteht aus Allen, die sich für Informationsverarbeitung im Gesundheitswesen interessieren, oder eine Forschungskarriere im Bereich der medizinischen Informatik anstreben.</p><br><br>
+                <h2>Allgemeine Daten</h2><br>
                 <p>Studienbeginn: Wintersemester</p><br>
                 <p>Abschluss: Bachelor of Science</p><br>
                 <p>Zulassungsbeschränkt: Ja</p><br>
-                <p>Regelstudienzeit: 6 Semester</p><br>
-                <h2>Berufsperspektiven</h2>
+                <p>Regelstudienzeit: 6 Semester</p><br><br>
+                <h2>Berufsperspektiven</h2><br>
                 <p>Prinzipiell können Medizininformatiker in allen Bereichen der IT-Branche arbeiten. Insbesondere können Absolventen in der medizinischen Datenverarbeitung eingesetzt werden.</p><br>
                 <p>Eine weitere Möglichkeit ist die Vertiefung der Kompetenzen im Masterstudiengang der Medizininformatik, anderen Masterstudiengängen der Informatik, oder medizinnahen Masterstudiengängen.</p>
             </div>
@@ -199,6 +200,7 @@
             </table>
             <span id="zusatzinfos">
                 <p>Anmerkung: Hinzu kommen noch Übungen und Übungsgruppen für die jeweiligen Fächer.</p>
+                <p id="attention">Gehe mit der Maus über die einzelnen Fächer um zusätzliche Informationen zu erhalten.</p>
             </span>
         </div>
     </main>
