--- a/ansprechpartner.html
+++ b/ansprechpartner.html
@@ -14,6 +14,8 @@
         #text {
             margin-left: 2em;
             margin-top: 1em;
+            font-size: 1.1em;
+            font-family: sans-serif;
         }
     </style>
 </head>
@@ -48,7 +50,7 @@
 <main>
     <h1>Ansprechpartner</h1><br>
     <div id="text">
-        <p>Kontaktdaten</p><br><br>
+        <p><h2>Kontaktdaten</h2></p><br><br>
         <p>Prof. Dr. Hendrik Lensch</p>
         <p>Fachbereichssprecher</p><br>
         <p>Prof. Dr. Oliver Bringmann<br>stellv. Fachbereichssprecher</p><br>
