--- a/faecher/faecher.html
+++ b/faecher/faecher.html
@@ -54,7 +54,7 @@
         }
 
         .description {
-            font-size: 0.95em;
+            font-size: 1.03em;
         }
     </style>
 </head>
@@ -94,7 +94,7 @@
                 <span>
                     <div class="desc_title"><a href="bioinformatik.html">Bioinformatik</a></div>
                     <div class="description">
-                        <p>Der Studiengang Bioinformatik besteht haupstsächlich aus Veranstaltungen aus den Bereichen: Informatik, Mathematik, Biologie und Chemie.  Hierbei werden „Informatik und Mathematik“ und die „Lebens – und Naturwissenschaften“ zu gleichen Teilen gewichtet.</p>
+                        <p>Der Studiengang Bioinformatik besteht haupstsächlich aus Veranstaltungen aus den Bereichen: Informatik, Mathematik, Biologie und Chemie.  Hierbei werden „Informatik und Mathematik“ und die „Naturwissenschaften“ zu gleichen Teilen gewichtet.</p>
                         <br><p>Regelstudienzeit sind 6 Semester. Studienbeginn ist sowohl im Wintersemester, als auch im Sommersemester möglich.</p>
                         <br><p>Wer sich für Informationsverarbeitung im Bereich der Lebenswissenschaften interressiert, oder  eine Forschungskarriere im Bereich Pharmaindustrie, Biotechnologie, Biologie, oder Informatik anstrebt, sollte sich genauer mit dem Studiengang beschäftigen.</p>
                     </div>
