--- a/faecher/informatik.html
+++ b/faecher/informatik.html
@@ -15,13 +15,6 @@
             margin-top: 1em;
         }
 
-        #text {
-            float: left;
-            width: 40%;
-            margin-left: 2em;
-            line-height: 1.15em;
-        }
-
         .image {
             height: 20em;
             margin-left: 3em;
@@ -65,7 +58,7 @@
     <h1>Informatik</h1>
     <main>
         <div id="information">
-            <div id="text">
+            <div id="texte">
                 <h2>Beschreibung</h2><br>
                 <p>Das Studium der Informatik beschäftigt sich größtenteils  mit Inhalten der allgemeinen, praktischen,
                     theoretischen und technischen Informatik, sowie der Mathematik.  Vermittelt werden außerdem
