--- a/faecher/medizininformatik.html
+++ b/faecher/medizininformatik.html
@@ -15,13 +15,6 @@
             margin-top: 1em;
         }
 
-        #text {
-            float: left;
-            width: 40%;
-            margin-left: 2em;
-            line-height: 1.15em;
-        }
-
         .image {
             height: 20em;
             margin-left: 3em;
@@ -65,7 +58,7 @@
     <h1>Medizininformatik</h1>
     <main>
         <div id="information">
-            <div id="text">
+            <div id="texte">
                 <h2>Beschreibung</h2><br>
                 <p>Der Studiengang der Medizininformatik vermittelt hauptsächlich Grundlagen der Informatik, Mathematik, Biologie und Medizin, wobei der Mathematik eine eher untergeordnete Rolle zugeordnet wird.</p><br>
                 <p>Die Kurse des 6-semestrigen Studiums sind bis zum 4. Semester komplett festgelegt. Ab dem 5. Semester können einige Schwerpunkte nach eigenem Interesse gesetzt werden.</p><br>
