--- a/klausurinfo.html
+++ b/klausurinfo.html
@@ -12,7 +12,7 @@
         }
 
         main {
-            margin-bottom: 60em;
+            margin-bottom: 70em;
         }
 
         .section {
@@ -20,6 +20,8 @@
             padding-left: 2em;
             padding-top: 2em;
             float: left;
+            font-family: sans-serif;
+            font-size: 1.1em;
         }
 
     </style>
