--- a/organisation/organisation.html
+++ b/organisation/organisation.html
@@ -16,10 +16,12 @@
             padding-left: 2em;
             padding-top: 2em;
             float: left;
+            font-size: 1.1em;
+            font-family: sans-serif;
         }
 
         #text {
-            margin-bottom: 45em;
+            margin-bottom: 55em;
         }
 
         .section ul {
@@ -107,7 +109,7 @@
                 werden.</p><br>
             <p>Der Semesterbeitrag setzt sich aus dem Beitrag zum Studierendenwerk, den Verwaltungskosten und dem
                 Studierendenschaftsbeitrag zusammen. Genauere Informationen unter: <a
-                        href="https://www.uni-tuebingen.de/studium/studienorganisation/beitraege-und-gebuehren/semesterbeitraege.html">Semesterbeiträge</a>
+                        href="https://www.uni-tuebingen.de/studium/studienorganisation/beitraege-und-gebuehren/semesterbeitraege.html">Semesterbeiträge</a>.
             </p>
         </div>
         <div class="section">
