--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
             font-family: sans-serif;
             font-size: 1em;
             width: 40%;
-        }
-
-        #text {
+            z-index: 0;
         }
 
         main ul li {
