--- a/faecher/faecher.html
+++ b/faecher/faecher.html
@@ -83,7 +83,7 @@
 </header>
 <content>
     <main>
-        <h1>Fächer</h1>
+        <h1>Studienangebote</h1>
         <ul>
             <li id="bioinformatik">
                 <span>
