--- a/faecher/informatik.html
+++ b/faecher/informatik.html
@@ -11,10 +11,6 @@
             width: 100vw;
         }
 
-        main {
-            margin-top: 1em;
-        }
-
         .image {
             height: 20em;
             margin-left: 3em;
@@ -55,8 +51,8 @@
     </nav>
 </header>
 <content>
-    <h1>Informatik</h1>
     <main>
+        <h1>Informatik</h1><br>
         <div id="information">
             <div id="texte">
                 <h2>Beschreibung</h2><br>
