--- a/faecher/faecher.html
+++ b/faecher/faecher.html
@@ -48,6 +48,11 @@
             font-size: 2em;
         }
 
+        .desc_title a {
+            color: #4d69bc;
+            text-decoration: none;
+        }
+
         .description {
             font-size: 1.03em;
         }
@@ -87,36 +92,39 @@
         <ul>
             <li id="bioinformatik">
                 <span>
-                    <div class="desc_title"><a href="bioinformatik.html">Bioinformatik</a></div>
+                    <div class="desc_title">Bioinformatik</div>
                     <div class="description">
                         <p>Der Studiengang Bioinformatik besteht haupstsächlich aus Veranstaltungen aus den Bereichen: Informatik, Mathematik, Biologie und Chemie.  Hierbei werden „Informatik und Mathematik“ und die „Naturwissenschaften“ zu gleichen Teilen gewichtet.</p>
                         <br><p>Regelstudienzeit sind 6 Semester. Studienbeginn ist sowohl im Wintersemester, als auch im Sommersemester möglich.</p>
-                        <br><p>Wer sich für Informationsverarbeitung im Bereich der Lebenswissenschaften interressiert, oder  eine Forschungskarriere im Bereich Pharmaindustrie, Biotechnologie, Biologie, oder Informatik anstrebt, sollte sich genauer mit dem Studiengang beschäftigen.</p>
+                        <br><p>Wer sich für Informationsverarbeitung im Bereich der Lebenswissenschaften interressiert, oder  eine Forschungskarriere im Bereich Pharmaindustrie, Biotechnologie, Biologie, oder Informatik anstrebt, sollte sich genauer mit dem Studiengang beschäftigen.</p><br>
+                        <a href="bioinformatik.html">Mehr anzeigen</a>
                     </div>
                 </span>
-                <img class="image bioinfo" src="../Images/bioinfo.jpg">
+                <a href="bioinformatik.html"><img class="image bioinfo" src="../Images/bioinfo.jpg"></a>
             </li>
             <li id="informatik">
                 <span>
-                    <div class="desc_title"><a href="informatik.html">Informatik</a></div>
+                    <div class="desc_title">Informatik</div>
                     <div class="description">
                         <p>Das Studium der Informatik beschäftigt sich größtenteils  mit Inhalten der allgemeinen, praktischen, theoretischen und technischen Informatik, sowie der Mathematik.  Vermittelt werden außerdem Kenntnisse in einem wählbaren Anwendungsbereich.</p>
                         <br><p>Regelstudienzeit sind 6 Semester. Studienbeginn ist sowohl im Wintersemester, als auch im Sommersemester möglich.</p>
                         <br><p>Der Studiengang der Informatik ist besonders geeignet für jeden, der sich für Informationsverarbeitung interressiert, sowie ein Verständnis für Mathematik, logisches Denken und Abstraktionsvermögen aufweisen kann.</p>
+                        <br><a href="informatik.html">Mehr anzeigen</a>
                     </div>
                 </span>
-                <img class="image info" src="../Images/informatik.jpg">
+                <a href="informatik.html"><img class="image info" src="../Images/informatik.jpg"></a>
             </li>
             <li id="medizininformatik">
                 <span>
-                    <div class="desc_title"><a href="medizininformatik.html">Medizininformatik</a></div>
+                    <div class="desc_title">Medizininformatik</div>
                     <div class="description">
                         <p>Der Studiengang der Medizininformatik vermittelt hauptsächlich Grundlagen der Informatik, Mathematik, Biologie und Medizin.</p>
                         <br><p>Regelstudienzeit sind 6 Semester. Studienbeginn ist nur im Wintersemester möglich.</p>
                         <br><p>Die Zielgruppe des Studiums der Medizininformatik besteht aus Allen, die sich für Informationsverarbeitung im Gesundheitswesen interessieren, oder eine Forschungskarriere im Bereich der medizinischen Informatik anstreben. </p>
+                        <br><a href="medizininformatik.html">Mehr anzeigen</a>
                     </div>
                 </span>
-                <img class="image medinfo" src="../Images/medinfo.jpeg">
+                <a href="medizininformatik.html"><img class="image medinfo" src="../Images/medinfo.jpeg"></a>
             </li>
         </ul>
     </main>
