--- a/gebaeude.html
+++ b/gebaeude.html
@@ -140,19 +140,19 @@
         <ul>
             <li>
                 <h3>Hörsaal N5</h3>
-                <p>Horsaalzentrum 1. OG</p>
+                <p>Hörsaalzentrum 1. OG</p>
                 <img src="Images/Marker.png" id="n5" class="marker">
             </li>
 			
             <li>
                 <h3>Hörsaal N6</h3>
-                <p>Horsaalzentrum 1. OG</p>
+                <p>Hörsaalzentrum 1. OG</p>
                 <img src="Images/Marker.png" id="n6" class="marker">
             </li>
 
             <li>
                 <h3>Hörsaal N7</h3>
-                <p>Horsaalzentrum 1. OG</p>
+                <p>Hörsaalzentrum 1. OG</p>
                 <img src="Images/Marker.png" id="n7" class="marker">
             </li>
 
