--- a/gebaeude.html
+++ b/gebaeude.html
@@ -76,8 +76,8 @@
         }
 		
         #bus3 {
-            margin-left: -36em;
-            margin-top: -37.5em;
+            margin-left: -600px;
+            margin-top: -560px;
         }
 
         #bus4 {
