--- a/faecher/faecher.html
+++ b/faecher/faecher.html
@@ -46,6 +46,7 @@
 
         .desc_title {
             font-size: 2em;
+            font-family: Lora, sans-serif;
         }
 
         .desc_title a {
