--- a/gebaeude.html
+++ b/gebaeude.html
@@ -33,6 +33,7 @@
             top: 0;
             padding: 1em;
             margin-bottom: 0.3em;
+            border: 1px solid black;
         }
 
         .marker {
