--- a/gebaeude.html
+++ b/gebaeude.html
@@ -137,7 +137,7 @@
     <h1>Gebäude und Hörsaal Übersicht</h1>
     <div id="morgenstelle" class="section">
         <h2>Morgenstelle</h2>
-        <img src="Images/morgenstelle.png">
+        <img src="Images/morgenstelle.png" alt="Übersichtskarte der Morgenstelle (Bushaltestellen: BG Unfallklinik, Morgenstelle, Botanischer Garten)">
         <ul>
             <li>
                 <h3>Hörsaal N5</h3>
@@ -189,7 +189,7 @@
     </div><br>
     <div id="sand" class="section">
         <h2>Sand</h2>
-        <img src="Images/sand.png">
+        <img src="Images/sand.png" alt="Übersichtskarte vom Sand (Bushaltestelle: Sand Drosselweg)">
         <ul>
             <li>
                 <h3>Bushaltestelle</h3>
@@ -200,7 +200,7 @@
     </div><br>
 	<div id="psychatrie" class="section">
         <h2>Psychatrie</h2>
-        <img src="Images/psychatrie.png">
+        <img src="Images/psychatrie.png" alt="Übersichtskarte der Psychiatrie">
         <ul>
             <li>
                 <h3>Hörsaal Psychiatrie</h3>
