--- a/klausurinfo.html
+++ b/klausurinfo.html
@@ -12,7 +12,7 @@
         }
 
         main {
-            margin-bottom: 70em;
+            margin-bottom: 80em;
         }
 
         .section {
@@ -22,6 +22,10 @@
             float: left;
             font-family: sans-serif;
             font-size: 1.1em;
+        }
+
+        #attention {
+            padding: 1em;
         }
 
     </style>
@@ -89,6 +93,10 @@
             verhindert werden.</p><br>
         <p>Falls die Abmeldefrist schon abgelaufen ist, kann eine Mail an die Zuständigen  manchmal noch
             zu einer Abmeldung führen.</p>
+    </div>
+    <div class="section">
+        <div id="attention">Weitere Informationen zu den Terminen der Klausuren findet man auf den verschiedenen Studienseiten, wenn man
+            mit der Maus über die Fächer im Stundenplan fährt.</div>
     </div>
 </main>
 <footer>
